--- a/webapp/.htaccess
+++ b/webapp/.htaccess
@@ -2,4 +2,4 @@ RewriteEngine on
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule (.*) /index.php?_q=$1 [L,QSA]
+RewriteRule (.*) /index.php?path=$1 [L,QSA]
