added session object, before_view filter, guid() and randomstring()

--- a/core/config/config.json
+++ b/core/config/config.json
@@ -17,6 +17,7 @@
     "handlers": {
         "cache":"cache",
         "param":"param",
-        "logger":"logger"
+        "logger":"logger",
+        "session":"session"
     }
 }
